# oibvh

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/shaders/: mesh_fragment_shader.glsl
app/src/: main.cpp
app/src/cpu/: simpleBVH.cpp  simpleBVH.hpp  simpleCollide.cpp  simpleCollide.hpp
app/src/utils/: camera.cpp  drawableOibvhTree.cu  drawableOibvhTree.hpp  model.cpp  model.hpp  renderMesh.cpp  renderMesh.hpp  scene.cu  scene.hpp  shader.cpp  transform.cu  transform.hpp
cmake/find/: Findassimp.cmake
cmake/recipes/: assimp.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  stb.cmake
include/cpu/: simpleBVH.h
include/cuda/: oibvhTree.cuh
include/oibvh/cuda/: collide.cuh  oibvh.cuh  oibvhTree.cuh  oibvhTree.hpp  scene.cuh  utils.cuh
include/oibvh/utils/: mesh.hpp  utils.hpp
include/utils/: model.h
shaders/: mesh_vertex_shader.glsl
src/: main.cpp
src/cpu/: simpleBVH.cpp
src/cuda/: collide.cu  oibvh.cu  oibvhTree.cu  scene.cu  transform.cu
src/utils/: mesh.cpp  shader.cpp  utils.cpp
